--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/AdvancedAppManager_AppCauldron_Thumbnail.jpg" class="img-responsive" alt="">
+                        <img src="img/AdvancedAppManager_AppCauldron_Thumbnail.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
