--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/AdvancedAppManager_AppCauldron_Thumbnail.png" class="img-responsive" alt="">
+                        <img src="img/AdvancedAppManager.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -441,7 +441,7 @@
                                 <h2>Advanced App Manager</h2>
                                 <hr class="star-primary">
                                 <p class="item-intro text-muted">Porfolio website</p>
-                                <img class="img-responsive" src="img/AdvancedAppManager_AppCauldron_Thumbnail.jpg" alt="">
+                                <img class="img-responsive" src="img/AdvancedAppManager.jpg" alt="">
                                 <p>
                                     Advanced App Manager allows users of phones running Android 5.0+ to manage applications installed on their phones through a beautiful interface implementing Google's material design philosophy. 
                                     
