Changed the language in the content a bit.

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Album Art Daydream</h2>
                                 <hr class="star-primary">
-                                <p class="item-intro text-muted">A screensaver for Android Devices</p>
+                                <p class="item-intro text-muted">A screensaver for Android devices</p>
                                 <img class="img-responsive" src="img/AlbumArt_Appcauldron_Thumbnail.jpg" alt="">
                                 <p>
                                    Albumart Daydream is a simple application that transforms your phone screen into a beautiful display of album artwork based on your music collection when connected for charging.
@@ -440,7 +440,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Advanced App Manager</h2>
                                 <hr class="star-primary">
-                                <p class="item-intro text-muted">Porfolio website</p>
+                                <p class="item-intro text-muted">An App Manager for Android Devices</p>
                                 <img class="img-responsive" src="img/AdvancedAppManager.jpg" alt="">
                                 <p>
                                     Advanced App Manager allows users of phones running Android 5.0+ to manage applications installed on their phones through a beautiful interface implementing Google's material design philosophy. 
